<resources>
    <string name="app_name">Logica</string>
    <string name="questionTrue">T</string>
    <string name="questionFalse">F</string>
    <string name="conjunction_and">Conjunction (AND)</string>
    <string name="check">Check</string>
    <string name="a_b">A^B</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="correct">That\'s all correct!</string>
    <string name="incorrect">That\'s not completely correct</string>
    <string name="wrong_input">Please enter \'T\' or \'F\'</string>
</resources>
